# face-animate

./: .gitignore  README.md  animate.py  app.py  generate_frame_strip.py  pyproject.toml  requirements.txt  run_tests.py  streamlit_app.py  web_ui.py
tests/: benchmark.py
