[project]
name = "face-animate"
version = "0.1.0"
description = "Face Animator Web UI"
requires-python = ">=3.9"
dependencies = [
    "flask==3.0.3",
    "mediapipe==0.10.14",
    "opencv-python-headless==4.10.0.84",
    "numpy==2.1.0",
    "imageio==2.35.0",
    "imageio-ffmpeg==0.5.1",
    "Pillow==10.4.0",
    "google-genai==1.3.0"
]

[tool.vercel]
entrypoint = "app:app"
