[project]
name = "face-animate"
version = "0.1.0"
description = "Face Animator Web UI"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "mediapipe>=0.10.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0,<2.0.0",
    "imageio>=2.33.0",
    "imageio-ffmpeg>=0.4.9",
    "Pillow>=10.0.0",
    "google-genai>=1.3.0"
]

[tool.vercel]
entrypoint = "app:app"
